# stockSentimentAnalysis

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml  skills-lock.json
agents/: briefing_report.py  earnings_subagent.py  entity_recognition.py  event_detection.py  hf_client.py  news_ingestion.py  recommendation.py  sentiment_analysis.py  signal_generation.py
backtesting/: __init__.py  engine.py  metrics.py  optimizer.py  report.py
config/: feeds.py  settings.py
dashboard/: app.js  index.html
docs/: app.js  index.html  latest.json  style.css
graph/: builder.py  router.py
models/: article.py  entity.py  event.py  recommendation.py  sentiment.py  signal.py
outputs/: 2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json
scripts/: run_optimizer.py  seed_backtest_signals.py  seed_embeddings.py  seed_sp500_profiles.py
state/: graph_state.py
storage/: supabase_store.py
tests/: test_config.py  test_earnings_subagent.py  test_entity_recognition.py  test_event_detection.py  test_hf_client.py  test_models.py  test_news_ingestion.py  (+4 more)
(+19 files in other folders)
