[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-sentiment"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "spacy>=3.7.0",
    "sentence-transformers>=3.0.0",
    "supabase>=2.4.0",
    "feedparser>=6.0.0",
    "newspaper3k>=0.2.8",
    "lxml[html_clean]>=5.0.0",
    "datasketch>=1.6.0",
    "yfinance>=0.2.40",
    "pandas>=2.1.0",
    "huggingface-hub>=0.22.0",
    "jinja2>=3.1.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "cloudscraper>=1.2.71",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "models",
    "state",
    "agents",
    "graph",
    "storage",
    "backtesting",
    "training",
    "scripts",
    "reports",
]
